Execução da Atividade da Semana 02 do Módulo 02

--- a/FIC2 - Back-End/Módulo 2 - Páginas customizadas com Node.JS/2ª Semana/Trabalho Prático da 2ª Semana/home.html
+++ b/FIC2 - Back-End/Módulo 2 - Páginas customizadas com Node.JS/2ª Semana/Trabalho Prático da 2ª Semana/home.html
@@ -10,7 +10,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
     <title>Início | SALVIA - Cosméticos Naturais</title>
   </head>
   <body>
@@ -32,7 +31,7 @@
         para cuidar da sua pele, cabelo e bem-estar. Não deixe essas ofertas
         passarem, acesse agora e aproveite.</span
       >
-      <div class="container py-5 d-flex gap-3">
+      <div class="container py-5 d-flex gap-3 flex-column flex-lg-row">
         <div
           class="card col-8 col-sm-7 col-md-5 col-lg-4 col-xl-3 pt-3 m-auto shadow"
         >
@@ -54,19 +53,18 @@
           </div>
           <div class="card-footer text-secondary d-flex justify-content-around">
             <span class="fs-4 fw-medium"> R$59,90 </span>
-            <a href="/p1"
-              ><span class="btn btn-success"> COMPRAR </span></a
-            >
+            <a href="/p1"><span class="btn btn-success"> COMPRAR </span></a>
           </div>
         </div>
 
         <div
           class="card col-8 col-sm-7 col-md-5 col-lg-4 col-xl-3 pt-3 m-auto shadow"
         >
-          <img
-            src="https://images.tcdn.com.br/img/img_prod/780462/hidratante_corporal_natural_alecrim_e_melaleuca_terral_849_1_7c087a7a84377210ad712ddae32e11c1_20210301124056.jpg  "
-            class="card-img-top"
-          />
+          <a href="/p2">
+            <img
+              src="https://images.tcdn.com.br/img/img_prod/780462/hidratante_corporal_natural_alecrim_e_melaleuca_terral_849_1_7c087a7a84377210ad712ddae32e11c1_20210301124056.jpg  "
+              class="card-img-top"
+          /></a>
           <div class="card-body">
             <h5 class="card-title">
               Hidratante Corporal - Alecrim e Melaleuca - TERRAL
@@ -89,10 +87,11 @@
         <div
           class="card col-8 col-sm-7 col-md-5 col-lg-4 col-xl-3 pt-3 m-auto shadow"
         >
-          <img
-            src="https://images.tcdn.com.br/img/img_prod/780462/creme_para_pes_e_pernas_natural_livealoe_3119_1_37ec7b86ac9053cfe5a88d732265e1dc.png"
-            class="card-img-top"
-          />
+          <a href="/p3"
+            ><img
+              src="https://images.tcdn.com.br/img/img_prod/780462/creme_para_pes_e_pernas_natural_livealoe_3119_1_37ec7b86ac9053cfe5a88d732265e1dc.png"
+              class="card-img-top"
+          /></a>
           <div class="card-body">
             <h5 class="card-title">
               Creme para Pés e Pernas Natural - Livealoe
@@ -108,7 +107,7 @@
           </div>
           <div class="card-footer text-secondary d-flex justify-content-around">
             <span class="fs-4 fw-medium"> R$56,91 </span>
-            <a href="/P3"><span class="btn btn-success"> COMPRAR </span></a>
+            <a href="/p3"><span class="btn btn-success"> COMPRAR </span></a>
           </div>
         </div>
       </div>
