--- a/FIC2 - Back-End/Módulo 2 - Páginas customizadas com Node.JS/2ª Semana/Trabalho Prático da 2ª Semana/p2.html
+++ b/FIC2 - Back-End/Módulo 2 - Páginas customizadas com Node.JS/2ª Semana/Trabalho Prático da 2ª Semana/p2.html
@@ -10,9 +10,9 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
     <title>
-      Leave-in Natural - Nativa Ecocosméticos | SALVIA - Cosméticos Naturais
+      Hidratante Corporal - Alecrim e Melaleuca - TERRAL | SALVIA - Cosméticos
+      Naturais
     </title>
   </head>
   <body>
@@ -28,13 +28,13 @@
           <li class="breadcrumb-item"><a href="/">Página Inicial</a></li>
           <li class="breadcrumb-item"><a href="/">Ofertas de Outono</a></li>
           <li class="breadcrumb-item active" aria-current="page">
-            Leave-in Natural - Nativa Ecocosméticos
+            Hidratante Corporal - Alecrim e Melaleuca - TERRAL
           </li>
         </ol>
       </nav>
 
       <h1 id="head-title" class="display-6 pt-5">
-        Leave-in Natural - Nativa Ecocosméticos
+        Hidratante Corporal - Alecrim e Melaleuca - TERRAL
       </h1>
       <div class="container py-5 d-flex gap-3">
         <div class="card m-auto shadow col-xl-12">
@@ -49,10 +49,10 @@
             <div class="col-xl-4 p-2 flex-grow-1">
               <div class="card-body">
                 <h3 class="card-title">
-                  Leave-in Natural - Nativa Ecocosméticos
+                  Hidratante Corporal - Alecrim e Melaleuca - TERRAL
                 </h3>
                 <h6 class="card-subtitle text-secondary">
-                  7898652971938 | ⭐⭐⭐⭐⭐
+                  7896380660117 | ⭐⭐⭐⭐⭐
                 </h6>
 
                 <div class="d-none d-md-block">
@@ -62,15 +62,15 @@
                     <div class="btn-group" data-toggle="buttons">
                       <label class="btn btn-secondary p-3">
                         <input type="radio" name="opcao" autocomplete="off" />
-                        250ml
+                        90g
                       </label>
                       <label class="btn btn-secondary p-3">
                         <input type="radio" name="opcao" autocomplete="off" />
-                        500ml
+                        180g
                       </label>
                       <label class="btn btn-secondary p-3">
                         <input type="radio" name="opcao" autocomplete="off" />
-                        1L
+                        250g
                       </label>
                     </div>
                   </div>
@@ -91,56 +91,45 @@
               <div class="h4">Descrição</div>
               <div class="card-text fst-italic pt-3 mb-5">
                 <p>
-                  O Leave-in Natural é indicado para finalizar e umectar cabelos
-                  secos, desnutridos e desidratados. Elaborado para dar vida e
-                  definição aos cabelos.
+                  O Hidratante Corporal Natural Alecrim e Melaleuca é
+                  anti-stress, promovendo a sensação de contato com a natureza.
                 </p>
                 <p>
-                  Traz o poder de nutrição do óleo de Andiroba, manteiga de
-                  Cupuaçu e óleo de Oliva, e foi elaborado especialmente para
-                  dar vida e definição aos cabelos.
+                  O Alecrim é antidepressivo natural, além de antisséptico,
+                  estimula a memória e a circulação sanguínea.
                 </p>
                 <p>
-                  Trata pontas duplas, retém a umidade no fio evitando assim o
-                  aspecto de ressecamento. Tenha um day after perfeito!
+                  O Óleo de Melaleuca em contato com os poros elimina bactérias
+                  que contribuem para o aparecimento de espinhas e cravos.
                 </p>
-                <p>
-                  O Leave-in natural é rico em bioativos, proporciona cabelos
-                  finalizados e nutridos, sem silicones. Além do cheiro super
-                  refrescante do óleo essencial de Litsea cubeba.
-                </p>
-                <p>Combinação perfeita nesse Leave-in que vai te conquistar!</p>
+                <p>Indicado para todos os tipos de pele.</p>
+                <p>Não indicado para gestantes.</p>
               </div>
               <div class="h4">Modo de Usar</div>
               <div class="card-text fst-italic pt-3 mb-5">
                 <p>
-                  Após lavar os cabelos com shampoo e condicionador naturais,
-                  retire o excesso de água com ajuda de uma toalha e com os fios
-                  ainda úmidos, aplique o produto pelo comprimento e pontas dos
-                  fios. Nunca na raiz.
+                  Usar após o banho com a pele ainda úmida para maior absorção.
+                  Aplique a quantidade desejada sobre a pele e faça sempre
+                  movimentos circulares.
+                </p>
+                <p>
+                  Em caso de irritação da pele suspensa o uso e procure o seu
+                  dermatologista. Não recomendado para gestantes.
                 </p>
               </div>
               <div class="h4">Ingredientes</div>
               <div class="card-text fst-italic pt-3 mb-5">
                 <p>
-                  Aqua, Carapa Guaianensis Seed Oil (Andiroba), Theobroma
-                  Grandiflorum Seed Butter (Cupuaçu), Cetearyl Alcohol,
-                  Behentrimonium Methosulfate, Glycerin (Glicerina Vegetal),
-                  Cetyl Alcohol, Guar Hydroxypropyltrimonium Chloride,
-                  Tocopheryl Acetate (Vitamina E), Litsea Cubeba Fruit Oil (Óleo
-                  Essencial de Litsea), Benzyl Alcohol, Benzoic Acid, Sorbic
-                  Acid.
-                </p>
-                <p><strong>Principais ativos:</strong></p>
-                <p>
-                  Óleo de Andiroba, Manteiga de Cupuaçu, Glicerina
-                  vegetal,Vitamina E.
+                  Água, glicerina vegetal, óleo de Abacate, óleo de amêndoas
+                  doces, manteiga de karité, óleo essencial de alecrim, óleo
+                  essencial de melaleuca, óleo essencial de lavandin, olivem
+                  1000, vitamina E, nipaguard e óleo resina de alecrim.
                 </p>
               </div>
             </div>
           </div>
           <div class="card-footer text-secondary d-flex justify-content-around">
-            <span class="fs-1 fw-medium"> R$59,90 </span>
+            <span class="fs-1 fw-medium"> R$76,90 </span>
             <a href="#"
               ><span class="btn btn-success m-1 p-3 px-5 fs-5">
                 COMPRAR
